@@ -38,7 +38,9 @@ version 2.0.0
 	* Removed "Display remote nicknames if no alias is set"
 	* Removed "Show idle times" and "Show warning levels" from the buddy list
 	  defaulted to "Yes".
-	* Removed "Auto-expand contacts" default to "No".
+	* Removed "Auto-expand contacts" default to "No"
+	* Removed conversation buttons
+
 version 1.0.2 (10/19/2004):
 	Bug Fixes:
 	* MSN file transfers work on big endian machines (Jean-Francois Roy and
